--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -4,3 +4,12 @@ on:
     types: [opened]
 permissions:
   pull-requests: write
+jobs:
+  welcome:
+    name: Post welcome comment
+    runs-on: ubuntu-latestname: Post welcome comment
+on:
+  pull_request:
+    types: [opened]
+permissions:
+  pull-requests: write
